--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,16 +5,33 @@
     --blue-color:#114c92;
 }
 
-#hero{
-    background-image: url("../img/img1.png");
+#heroh{
+    background-image: linear-gradient(#1d1717,var(--primary-ad-color));
     background-color: var(--primary-ad-color);
     height: 870px;
     background-repeat: no-repeat;
     background-position: center right;
     background-size:auto;
 }
-.titre{
+#heroh .titre{
+    font-family: 'far_from_homecomingregular';
+    font-size: 5em;
+    font-weight: 100;
     margin-bottom: 50px;
+    color: #ffffff;
+}
+#hero div{
+    color: var(--white-ad-color);
+}
+#heroh .description{
+    font-weight: bold;
+    font-size: 1.4em;
+    color: #ffffff;
+}
+
+#heroh .box{
+    position: relative;
+    top: 25%;
 }
 
 #lesspiderman{
@@ -38,7 +55,6 @@
     color: var(--white-ad-color);
     border-radius: 40px;
     padding: 15px 20px;
-    
 }
 
 .card-text{
@@ -59,7 +75,7 @@
     color: var(--white-ad-color);
     background-color: var(--blue-color);
     height: 550px;
-    background-image: url("../img/img5.png");
+    /* background-image: url("../img/img5.png"); */
     background-position: center left;
     background-size: auto;
     background-repeat: no-repeat;
@@ -122,60 +138,155 @@ input[type=submit]{
     background-color: white;
     color: #000000;
 }
-.icon:hover{
-background-color: #4eecec;
-    filter: invert(100%);
-   
-}
+
+
+
+/*Animation*/
 .menu li:hover{
-    text-decoration: underline;
+    border-bottom: 2px solid white !important;
 }
-
-.titre {
-    animation-duration: 5s;
-    animation-name: lebo;
+.button1:hover{
+    border: var(--white-ad-color) 2px solid;
+    color: var(--white-ad-color);
+    background-color: transparent;
+    box-shadow: 0px 5px 5px 5px white;
 }
-
-@keyframes lebo {
+.button2:hover{
+    background-color: var(--white-ad-color);
+    color: var(--primary-ad-color);
+    box-shadow: 0px 5px 5px 5px var(--primary-ad-color);
+}
+.media img:hover{
+    background-color: #4decec;
+    filter: invert();
+}
+@keyframes lova {
     0% {
         opacity: 0%;
-        transform: translate(-100px);
-    }
-    100% {
-        opacity: 100%;
-    }
-}
-.text-uppercase{
-    animation-name: bole;
-    animation-duration: 5s;
-}
-@keyframes bole {
-    0%{
-        opacity: 0%;
+        transform: translate(0px, -400px);
     }
     100%{
         opacity: 100%;
+        transform: translate(300px, -400px);
     }
 }
-#marvel{
-    animation-name:marvel ;
-    animation-duration: 10s;
+.marvel img{
+    /* transform: translate(-100px, -400px); */
+    animation-name: lova;
+    animation-fill-mode: forwards;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
 }
-@keyframes marvel {
+.spider img{
+    /* opacity: 50%; */
+    transform: translate(600px,-800px);
+    position: fixed;
+}
+/*Animation noir et blanc*/
+.spiderNB img{
+    position: fixed;
+    top: 100px;
+}
+
+input{
+    color: #000000 !important;
+}
+
+h1{
+    animation-name: titreh1;
+    animation-duration: 5s;
+}
+@keyframes titreh1 {
     0%{
         opacity: 0%;
-        transform:translate(-150px) ;
+        transform: translateX(-100px);
     }
     100%{
         opacity: 100%;
     }
 }
 
-.home2 {
-    transform: translate(466px, 90px);
-    position: fixed;
+h1 + p {
+    animation-name: titrep;
+    animation-duration: 5s;
 }
-.home3{
-    transform: translate(-125px);
-    position: fixed;
+@keyframes titrep {
+    0%{
+        opacity: 0%;
+    }
+    100%{
+        opacity: 100%;
+    }
+}
+i{
+    color: #000000;
+}
+
+.grid1 {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    align-items: center;
+    width: 50%;
+    color: #ffffff;
+}
+
+.item-grid img {
+    width: 80px;
+}
+
+#progress{
+    width: 50%;
+}
+
+.playPause{
+    display: flex;
+    width: 50%;
+    justify-content: space-between;
+}
+/* =================================== */
+/* .progress {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 380px;
+    margin: 100px auto;
+  }
+
+  .progress-bar {
+    position: relative;
+    width: 70%;
+    height: 5px;
+    background-color: #eee;
+    vertical-align: 2px;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+
+  .now {
+    position: absolute;
+    left: 0;
+    display: inline-block;
+    height: 5px;
+    width: 70%;
+    background: #31c27c;
+  }
+
+  .now::after {
+    content: '';
+    position: absolute;
+    left: 100%;
+    width: 3px;
+    height: 7px;
+    background-color: lightblue;
+  } */
+
+  .hp_slide{
+    width:100%;
+    background:white;
+    height:25px;
+}
+.hp_range{
+    width:0;
+    background:black;
+    height:25px;
 }
